references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Import_Visibility_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:5134c472d776c3d7ac64f4094008cceb67c6327f28b3a8ec8caf7cd47027b797
size 682
